--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
     /* distância dos itens */
 }
 
-video, .modelos {
+video,
+.modelos {
     width: 100%;
     /* largura */
     height: 100%;
@@ -50,16 +51,20 @@ h1 {
 .item {
     display: flex;
     /* justify-content: space-between; CRIA UM ESPAÇAMENTO ENTRE OS ITENS */
-    flex-direction: column;  /* DEIXA UM ITEM DEBAIXO DO OUTRO */
+    flex-direction: column;
+    /* DEIXA UM ITEM DEBAIXO DO OUTRO */
     position: relative;
-    width: 100vw;   /* A TELA TODA - ALTURA*/
-    height: 100vh;  /* A TELA TODA - LARGURA*/
-    scroll-snap-align: start; /* PARA PULAR PARA A PRÓXIMA IMAGEM - COMPLEMENTO DO  scroll-snap-type: y mandatory; */
+    width: 100vw;
+    /* A TELA TODA - ALTURA*/
+    height: 100vh;
+    /* A TELA TODA - LARGURA*/
+    scroll-snap-align: start;
+    /* PARA PULAR PARA A PRÓXIMA IMAGEM - COMPLEMENTO DO  scroll-snap-type: y mandatory; */
 }
 
 .info-carro {
     color: white;
-    
+
     margin-top: 80px;
     text-align: center;
 
@@ -67,19 +72,23 @@ h1 {
 }
 
 .rodape {
-    text-align: center; /* ALINHA MEU ITEM AO CENTRO */
+    text-align: center;
+    /* ALINHA MEU ITEM AO CENTRO */
 }
 
 html {
-    scroll-snap-type: y mandatory; /*quando rolar a tela, rola para a px imagem, sem ir "aos poucos" */
+    scroll-snap-type: y mandatory;
+    /*quando rolar a tela, rola para a px imagem, sem ir "aos poucos" */
 }
 
 button {
     background-color: rgba(34, 34, 34, 0.8);
     color: white;
     padding: 7px 80px;
-    border-radius: 5px; /* ARREDONDA A BORDA DO BOTÃO */
-    border: none; /* TIRA A BORDA DO BOTÃO */
+    border-radius: 5px;
+    /* ARREDONDA A BORDA DO BOTÃO */
+    border: none;
+    /* TIRA A BORDA DO BOTÃO */
     opacity: 0.8;
     cursor: pointer;
     margin-top: 300px;
@@ -89,7 +98,7 @@ button {
     background-color: grey;
 }
 
-button:hover{
+button:hover {
     opacity: 90%;
 }
 
@@ -109,3 +118,31 @@ button:hover{
 #modelox {
     color: black;
 }
+
+.botaoform {
+    margin: 0;
+    padding: 0;
+
+    background-color: rgba(34, 34, 34, 0.8);
+    color: white;
+    padding: 7px 80px;
+    border-radius: 5px;
+    /* ARREDONDA A BORDA DO BOTÃO */
+    border: none;
+    /* TIRA A BORDA DO BOTÃO */
+    opacity: 0.8;
+    cursor: pointer;
+    
+
+}
+
+.formulario {
+    position: fixed;
+    top: 40px;
+    width: 550px;
+    height: 100%;
+    z-index: 3;
+    left: -50%;
+    transition: 1s;
+}
+
